# refactoredCPPNeuronMesher

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  requirements.txt  setup.py  system_info.sh
.github/workflows/: build.yml  clang-tidy.yml  cmake-single-platform.yml  codeql.yml  codoql.yml  doctest.yml  pytest.yml  sonarcloud.yml  test.yml
data/: Alob5_WT_758.CNG.swc  purkinjeNoSoma.swc
data/SWC/: 1396_Mohan_etal_2015.CNG.swc  185-4-16dw.CNG.swc  228-12-NBSS.CNG.swc  228-12MG.CNG.swc  228-16-NBSS.CNG.swc  228-9MG.CNG.swc  Purkinje-slice-ageP35-3.CNG.swc  Purkinje-slice-ageP35-4.CNG.swc  Purkinje-slice-ageP37-5.CNG.swc  S1_CKp25_6w_F_Animal04_Trace012.CNG.swc  amf_24.CNG.swc
data/SWC_set_2/: 010626DS1.CNG.swc  010721C.CNG.swc  010920-slice2-cellB.CNG.swc  012417B_ECA.CNG.swc  040308_C1g.CNG.swc  04b_pyramidal7aACC.CNG.swc  150707_4_1_full.CNG.swc  245638-1mo-GFAP-IFN-20x-cerebellum-iba1-2_1.CNG.swc  571732727_transformed.CNG.swc  59-8_S_7_100x_ventral_DG_1.CNG.swc  CN_Development_P7_F_Animal02_Trace088.CNG.swc  DG_Adulthood_Control_F_Animal01_Trace736.CNG.swc  EE5-Young-ME_sec6cel3aej5me.CNG.swc  OB_CKp25_1w_F_Animal01_Trace037.CNG.swc  P14_rat1_layerVa_cell3.CNG.swc  S1_1xKXA_M_Animal02_Trace047.CNG.swc  VGlut-F-400013.CNG.swc  WZ54_S2_central.CNG.swc
data/UGX/: 0-2a.ugx  0001_1.ugx  0001_2.ugx  185-4-16dw.ugx  228-12-NBSS.ugx  228-16-NBSS.ugx  Purkinje-slice-ageP35-3.ugx
data/UGXMESHES/: sphere.ugx  sphereNoFace.ugx  sphereNoFaceNoEdge.ugx  tetrahedron.ugx  twosubsets.ugx  twosubsets2.ugx
docs/: DoxygenMainpage.md  _config.yml  index.md  plan.md
docs/doxygen/: README_8md.html  annotated.html  annotated_dup.js  bindings_8cpp.html  bindings_8cpp.js  bindings_8cpp__incl.md5  bindings_8cpp_aae7648d27183e458e522ad3086719fde_cgraph.map  bindings_8cpp_aae7648d27183e458e522ad3086719fde_cgraph.md5  callbacks_8cpp.html  callbacks_8cpp_a0b9e239c8889734711f29fe45551605b_cgraph.map  callbacks_8cpp_a0b9e239c8889734711f29fe45551605b_cgraph.md5  callbacks_8cpp_a0b9e239c8889734711f29fe45551605b_icgraph.map  callbacks_8cpp_aa9b224479e8c1cc5251b8e7f3fdabacd_icgraph.map  callbacks_8cpp_aa9b224479e8c1cc5251b8e7f3fdabacd_icgraph.md5  callbacks_8cpp_ae41a3951e1196401047b29ad1d37c6ae_icgraph.map  callbacks_8cpp_ae49f0c4c2064be8fbcf555f46460b7df_icgraph.map  callbacks_8cpp_ae49f0c4c2064be8fbcf555f46460b7df_icgraph.md5  callbacks_8h.html  callbacks_8h.js  callbacks_8h__incl.map  callbacks_8h__incl.md5  callbacks_8h_a0b9e239c8889734711f29fe45551605b_cgraph.map  callbacks_8h_a0b9e239c8889734711f29fe45551605b_cgraph.md5  callbacks_8h_a0b9e239c8889734711f29fe45551605b_icgraph.map  callbacks_8h_ae49f0c4c2064be8fbcf555f46460b7df_icgraph.md5  classNeuronGraph-members.html  classNeuronGraph.html  classNeuronGraph.js  classNeuronGraph_a096f5d8b9231d0b27f0a60a694db41d3_cgraph.map  classNeuronGraph_a096f5d8b9231d0b27f0a60a694db41d3_icgraph.map  classNeuronGraph_a096f5d8b9231d0b27f0a60a694db41d3_icgraph.md5  classNeuronGraph_a0a94b95b0afc5d98590e631f963a970d_cgraph.md5  classNeuronGraph_a0a94b95b0afc5d98590e631f963a970d_icgraph.map  classNeuronGraph_a0a94b95b0afc5d98590e631f963a970d_icgraph.md5  classNeuronGraph_a0d0ce27089a76553f8e4e109ffdf8183_cgraph.md5  classNeuronGraph_a0d0ce27089a76553f8e4e109ffdf8183_icgraph.map  classNeuronGraph_a0d0ce27089a76553f8e4e109ffdf8183_icgraph.md5  classNeuronGraph_a0dec1b5ec2012af3aa6cb50ce2c08941_cgraph.md5  classNeuronGraph_a126fba2e060c47a5a20445af0622d06b_cgraph.map  classNeuronGraph_a198959fac3c6691530c888896ae777ae_cgraph.md5  (+855 more)
include/project/: neurongraph.h  ugxobject.h  utils.h
include/viewer/: callbacks.h  draw_utils.h  globals.h  opgl_utils.h
output/: Alob5_WT_758.CNG_refined.swc
output/0-2a.CNG_refinements/: refinement_1.swc  refinement_1.ugx  refinement_2.swc  refinement_2.ugx  refinement_3.swc  refinement_3.ugx  refinement_4.swc  refinement_4.ugx  refinement_5.swc  refinement_5.ugx  refinement_6.swc  refinement_6.ugx
output/0-2a.CNG_trunks/: trunk_0.swc  trunk_1.swc  trunk_10.swc  trunk_11.swc  trunk_12.swc  trunk_13.swc  trunk_14.swc  trunk_15.swc  trunk_16.swc  trunk_17.swc  trunk_18.swc  trunk_19.swc  trunk_2.swc  trunk_20.swc  trunk_21.swc  trunk_22.swc  trunk_23.swc  trunk_24.swc  trunk_25.swc  trunk_26.swc  trunk_27.swc  trunk_28.swc  trunk_29.swc  trunk_3.swc  trunk_4.swc  trunk_5.swc  trunk_6.swc  trunk_7.swc  trunk_8.swc  trunk_9.swc
output/185-4-16dw.CNG_refinements/: refinement_1.swc  refinement_1.ugx  refinement_2.swc  refinement_2.ugx  refinement_3.swc  refinement_3.ugx  refinement_4.swc  refinement_4.ugx  refinement_5.swc  refinement_5.ugx  refinement_6.swc  refinement_6.ugx
output/UGX/: 0002-2_2.ugx  1396_Mohan_etal_2015.ugx  228-12MG.ugx  228-9MG.ugx  Purkinje-slice-ageP35-4.ugx  Purkinje-slice-ageP37-5.ugx  Purkinje-slice-ageP43-6.ugx  S1_CKp25_6w_F_Animal04_Trace012.ugx  amf_24.ugx
output/main_output/: examplewrite.swc
output/main_pft_geometries/: pft_0.ugx  pft_1.ugx  pft_10.ugx  pft_11.ugx  pft_12.ugx  pft_13.ugx  pft_14.ugx  pft_15.ugx  pft_16.ugx  pft_17.ugx  pft_18.ugx  pft_19.ugx  pft_2.ugx  pft_20.ugx  pft_21.ugx  pft_22.ugx  pft_23.ugx  pft_24.ugx  pft_25.ugx  pft_26.ugx  pft_27.ugx  pft_28.ugx  pft_29.ugx  pft_3.ugx  pft_30.ugx  pft_31.ugx  pft_32.ugx  pft_33.ugx  pft_34.ugx  pft_35.ugx  pft_36.ugx  pft_37.ugx  pft_38.ugx  pft_39.ugx  pft_4.ugx  pft_40.ugx  pft_41.ugx  pft_42.ugx  pft_43.ugx  pft_44.ugx  (+40 more)
output/neuron_refinements/: refinement_0.swc  refinement_1.ugx  refinement_2.swc  refinement_2.ugx  refinement_3.ugx  refinement_4.ugx  (+4 more)
scripts/: extracttrunks.cpp  main.cpp  splitrefine.cpp  splitrefineSET.cpp  swc_viewer  swc_viewer.cpp  ugxmain.cpp
scripts/app_neuronviewer/: CMakeLists.txt  README.md  neuronviewer.cpp  renderhelpwindow.cpp
scripts/swcviewer/: CMakeLists.txt  callbacks.cpp  drawing_helpers.cpp  swc_viewer.cpp
src/: bindings.cpp  neurongraph.cpp  neuronoperations.cpp  neuronpft.cpp  neurontrunks.cpp  neuronugx.cpp  ugxobject.cpp  utils.cpp
tests/: CMakeLists.txt  test_neurongraph.cpp  test_neurongraph_doctest.cpp  test_swc_to_ugx.cpp  test_ugxobject_doctest.cpp
(+1867 files in other folders)
